@@ -1,5 +1,14 @@
 2013-02-05 Miguel de Dios <miguel.dedios@artica.es>
 	
+	* operation/agentes/estado_monitores.php,
+	operation/agentes/datos_agente.php, godmode/setup/setup.php,
+	include/functions_config.php: added the can disabled the command
+	snapshot.
+	
+	Fixes: #3602773
+
+2013-02-05 Miguel de Dios <miguel.dedios@artica.es>
+	
 	* operation/gis_maps/render_view.php: fixed the height of maps when
 	the menu is short.
 	
